enable building rdkit-stubs as parte of the conda recipe

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -42,7 +42,7 @@ requirements:
     - pip
     - setuptools
     - setuptools_scm >=8
-    # For rdkit-tubs
+    # For rdkit-stubs
     - pybind11-stubgen
   run:
     - cairo
