--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,6 +14,7 @@ source:
   patches:
     - pyproject.patch
     - gen_rdkit_stubs_preserve_logs.patch
+    - reionizer_flyweight.patch
 
 build:
   number: 0
